# rye-prerelease-examples

with-pip-tools/: README.md  pyproject.toml
with-pip-tools/src/with_pip_tools/: __init__.py
with-uv/: README.md  pyproject.toml
with-uv/src/with_uv/: __init__.py
